# Shcool-Program

./: CMakeLists.txt  Class.cpp  Class.h  Layer.cpp  Layer.h  Manager.cpp  Manager.h  Person.cpp  Person.h  Pupil.cpp  Pupil.h  School.cpp  School.h  Secretary.cpp  Secretary.h  Teacher.cpp  Teacher.h  Tutor.cpp  Tutor.h  Worker.cpp  Worker.h  main.cpp
