cmake_minimum_required(VERSION 3.19)
project(untitled37)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled37 main.cpp Person.cpp Pupil.cpp Worker.cpp Teacher.cpp
        Tutor.cpp Class.cpp Manager.cpp Secretary.cpp Layer.cpp School.cpp)
#Class.cpp Worker
#.cpp Person.cpp Pupil.cpp Tutor.cpp Teacher.cpp Secretary.cpp School
#.cpp